adding Pandas exploration of the data

--- a/Data_Queries.ipynb
+++ b/Data_Queries.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Exploring the Requests by Copyright Owners for Google to Remove Search Results\n",
+    "# Exploring the Requests by Copyright Owners for Google to Remove Search Results\n",
     "\n",
     "Google regularly receives requests from copyright owners and reporting organizations to remove search results linking to material that allegedly infringe copyrights. This is an exploration of that data. The data is updated daily by Google. This inquiry is based on data from 1 June 2016. The whole data set up to the current date can be downloaded [hier](https://www.google.com/transparencyreport/removals/copyright/data/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -36,19 +36,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#**TABLE OF CONTENTS**\n",
-    "###1. First Steps\n",
-    "###2. Pendung Requests\n",
-    "###3. Denied Requests\n",
-    "###4. Companies filing the requests\n",
-    "###5. Domains infringing copyright"
+    "# TABLE OF CONTENTS\n",
+    "### 1. First Steps\n",
+    "    Removal count, non-removal count, pending\n",
+    "### 2. Pendung Requests\n",
+    "### 3. Denied Requests\n",
+    "### 4. Companies filing the requests\n",
+    "### 5. Domains infringing copyright\n",
+    "### 6. List of Top Level Domain Occurences"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##1. First steps"
+    "## 1. First steps"
    ]
   },
   {
@@ -60,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -110,12 +112,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And how many links didn't Google remove?"
+    "And how many links hasn't Google removed yet?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##2. Pending requests"
+    "## 2. Pending requests"
    ]
   },
   {
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -298,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##3. Denied requests"
+    "## 3. Denied requests"
    ]
   },
   {
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -349,11 +351,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AudioLock.NET 863343\n",
+      "BPI (British Recorded Music Industry) Ltd 180032\n",
+      "MUSO.com Anti-piracy 155552\n",
+      "Digimarc 119335\n",
+      "proMedia 89682\n",
+      "Counterfeit.Technology 77256\n",
+      "Total Wipes Music Group 55152\n",
+      "None 51007\n",
+      "Degban Ltd 48978\n",
+      "Degban 39418\n"
+     ]
+    }
+   ],
    "source": [
     "cursor = conn.cursor()\n",
     "statement = \"SELECT reporting_organization_name, COUNT(*) FROM requests WHERE urls_removed > 0 AND urls_for_which_we_took_no_action = 0 GROUP BY reporting_organization_name ORDER BY count DESC LIMIT 10;\"\n",
@@ -366,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##4. Companies filing the requests"
+    "## 4. Companies filing the requests"
    ]
   },
   {
@@ -380,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -437,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -471,12 +490,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##5. Domain URLs with most removal requests"
+    "Gennaro Castaldo - BPI Director of Communications\n",
+    "020 7803 1300 \n",
+    "gennaro.castaldo@bpi.co.uk\n",
+    "\n",
+    "Hi Gennaro,\n",
+    "\n",
+    "According to the data Google provides here: https://www.google.com/transparencyreport/removals/copyright/data/, the BPI files by far the link requests to Google for copyright infringements. Here's the top ten. Based on data published up until 1 June 2016.\n",
+    "\n",
+    "145655\tBPI LTD MEMBER COMPANIES\n",
+    "142282\tBPI (British Recorded Music Industry) Ltd\n",
+    "33122\tFroytal Services Ltd\n",
+    "26990\tRIAA member companies (EMI Music North America, Sony Music Entertainment, Universal Music Group, Warner Music Group and their associated record labels)\n",
+    "24132\tIFPI\n",
+    "23580\tBeggars Group Digital Ltd\n",
+    "23168\tBREIN Participant\n",
+    "22067\tEntertainment One\n",
+    "20581\tAnjunadeep\n",
+    "19615\tUniversal Music GmbH\n",
+    "\n",
+    "- Why does BPI file so many more requests than any other company?\n",
+    "- Do you file a similar amount of requests to the actual site owners, hosting the content? \n",
+    "- How do you deal with site, contiously infringing copyright? The company with the most links that Google has removed is a Swiss site called uploaded.net.\n",
+    "\n",
+    "Kind regards,\n",
+    "Barnaby Skinner"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Domain URLs with most removal requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -531,16 +581,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1348067\n",
-      "uploaded.net http://www.chillingeffects.org/notices/10521749\n",
-      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=2116054\n",
-      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1612786\n",
-      "uploaded.net http://lumendatabase.org/notices/11931017\n",
-      "uploaded.net http://lumendatabase.org/notices/11677485\n",
-      "uploaded.net http://lumendatabase.org/notices/11610286\n",
-      "uploaded.net http://lumendatabase.org/notices/11842782\n",
-      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1707395\n",
-      "uploaded.net http://www.chillingeffects.org/notices/11354978\n"
+      "uploaded.net http://www.chillingeffects.org/notices/10685865\n",
+      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1202751\n",
+      "uploaded.net http://www.chillingeffects.org/notices/10529984\n",
+      "uploaded.net http://www.chillingeffects.org/notices/10753842\n",
+      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1613329\n",
+      "uploaded.net http://lumendatabase.org/notices/11845463\n",
+      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1972410\n",
+      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1619893\n",
+      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=1671212\n",
+      "uploaded.net http://www.chillingeffects.org/notice.cgi?sID=921878\n"
      ]
     }
    ],
@@ -561,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -593,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -632,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -660,13 +710,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. List of Top Level Domain Occurences"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[581856, 'mediafire.li', 1, 0, 0, False]\n",
+      "[581856, 'mediafire.vc', 1, 0, 0, False]\n",
+      "[581856, 'mega-upload.org', 1, 0, 0, False]\n",
+      "[581856, 'megauploaders.com', 1, 0, 0, False]\n",
+      "[581856, 'monova.org', 0, 1, 0, False]\n",
+      "[581856, 'mp3boo.com', 2, 0, 0, False]\n",
+      "[581856, 'myfreemp3.eu', 1, 0, 0, False]\n",
+      "[581856, 'nangchieucali.com', 1, 0, 0, False]\n",
+      "[581856, 'net-people.appspot.com', 13, 0, 0, False]\n",
+      "[581856, 'netload.in', 1, 0, 0, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cursor = conn.cursor()\n",
+    "statement = \"SELECT * FROM domains LIMIT 10;\"\n",
+    "cursor.execute(statement)\n",
+    "for row in cursor:\n",
+    "    print(row)"
+   ]
   },
   {
    "cell_type": "code",
